--- a/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
+++ b/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
@@ -143,8 +143,8 @@
                                     <constraint firstAttribute="height" constant="1" id="bFM-Eb-4aM"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6B-JC-1FO">
-                                <rect key="frame" x="180" y="43" width="15" height="15"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6B-JC-1FO">
+                                <rect key="frame" x="0.0" y="43" width="15" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="K8a-jo-Pwg"/>
                                     <constraint firstAttribute="width" constant="15" id="UUd-qS-zqA"/>
@@ -239,8 +239,8 @@
                                     <constraint firstAttribute="bottom" secondItem="Nsd-xl-EhO" secondAttribute="bottom" constant="10" id="rTH-vJ-bAZ"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="공대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5I-8v-RYy">
-                                <rect key="frame" x="142" y="0.0" width="90" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5I-8v-RYy">
+                                <rect key="frame" x="0.0" y="0.0" width="90" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="wEl-kO-jla"/>
                                     <constraint firstAttribute="height" constant="40" id="zEp-nM-A67"/>
@@ -423,8 +423,8 @@
                                     <constraint firstItem="Trc-sj-lNv" firstAttribute="leading" secondItem="f8D-Jc-fZI" secondAttribute="leading" constant="-10" id="wEg-Ky-zMJ"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="해대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsR-Sr-HRL">
-                                <rect key="frame" x="0.0" y="2" width="142.5" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsR-Sr-HRL">
+                                <rect key="frame" x="0.0" y="0.0" width="142.5" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="o9V-CM-dHg"/>
                                 </constraints>
