--- a/JUN-tong/JUN-tong/CityBusDetailView.storyboard
+++ b/JUN-tong/JUN-tong/CityBusDetailView.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Eow-Vk-pWW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Eow-Vk-pWW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -317,9 +317,22 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ztp-LC-2yL">
+                                                            <rect key="frame" x="341" y="15" width="14" height="14"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="14" id="Qq5-Gz-wjr"/>
+                                                                <constraint firstAttribute="height" constant="14" id="knA-Ub-vFR"/>
+                                                            </constraints>
+                                                            <state key="normal" image="shape"/>
+                                                            <connections>
+                                                                <action selector="cityBusAlarmButtonTap:" destination="n9l-cv-rSO" eventType="touchUpInside" id="CoH-cA-tCA"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="ztp-LC-2yL" secondAttribute="trailing" constant="20" id="Jo6-JP-2dd"/>
+                                                        <constraint firstItem="ztp-LC-2yL" firstAttribute="centerY" secondItem="ZRg-h3-Rrt" secondAttribute="centerY" id="i03-wk-PRd"/>
                                                         <constraint firstItem="Oiw-nu-9rk" firstAttribute="leading" secondItem="ZRg-h3-Rrt" secondAttribute="leading" constant="29" id="rjl-Ac-F2r"/>
                                                         <constraint firstItem="Oiw-nu-9rk" firstAttribute="centerY" secondItem="ZRg-h3-Rrt" secondAttribute="centerY" id="vGK-at-Z5M"/>
                                                     </constraints>
@@ -333,6 +346,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="cityBusAlarmButton" destination="ztp-LC-2yL" id="QeT-cI-zoP"/>
                                             <outlet property="cityBusTimeCell" destination="ZRg-h3-Rrt" id="OFW-P7-KCT"/>
                                             <outlet property="departTimeLabel" destination="jNY-Zy-ggi" id="s2z-xM-MEJ"/>
                                             <outlet property="remainTimeLabel" destination="gPt-ot-s26" id="iIR-GY-lTa"/>
@@ -361,5 +375,6 @@
     </scenes>
     <resources>
         <image name="oval" width="14" height="14"/>
+        <image name="shape" width="14" height="14"/>
     </resources>
 </document>
